[project]
name = "udemy-langchain-crashcourse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "langchain[openai]>=0.3.27",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.35",
    "python-dotenv>=1.1.1",
    "langgraph>=0.6.10",
    "langchain-tavily>=0.2.12",
    "langchain-community>=0.3.31",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "ipython>=8.37.0",
]
